@@ -63,7 +63,7 @@
  * Public Functions
  ************************************************************************************/
 
-/**************************************************************************
+/************************************************************************************
  * Name: up_fullcontextrestore
  *
  * Description:
@@ -74,7 +74,7 @@
  * Return:
  *   None
  *
- **************************************************************************/
+ ************************************************************************************/
 
 	.thumb_func
 	.globl	up_fullcontextrestore
