@@ -63,7 +63,7 @@
  * Public Functions
  ************************************************************************************/
 
-/**************************************************************************
+/************************************************************************************
  * Name: up_saveusercontext
  *
  * Description:
@@ -75,7 +75,7 @@
  *   0: Normal return
  *   1: Context switch return
  *
- **************************************************************************/
+ ************************************************************************************/
 
 	.text
 	.thumb_func
