@@ -1,8 +1,8 @@
 /****************************************************************************
- *  arch/arm/src/arm/up_initialstate.c
+ *  arch/arm/src/stm32/stm32_waste.c
  *
- *   Copyright (C) 2007-2009, 2011 Gregory Nutt. All rights reserved.
- *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+ *   Copyright (C) 2011 Uros Platise. All rights reserved.
+ *   Author: Uros Platise <uros.platise@isotel.eu>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -38,15 +38,7 @@
  ****************************************************************************/
 
 #include <nuttx/config.h>
-
 #include <stdint.h>
-#include <string.h>
-
-#include <nuttx/arch.h>
-
-#include "arm.h"
-#include "up_internal.h"
-#include "up_arch.h"
 
 /****************************************************************************
  * Pre-processor Definitions
@@ -57,6 +49,12 @@
  ****************************************************************************/
 
 /****************************************************************************
+ * Public Data
+ ****************************************************************************/
+
+uint32_t idle_wastecounter = 0;
+
+/****************************************************************************
  * Private Functions
  ****************************************************************************/
 
@@ -65,82 +63,22 @@
  ****************************************************************************/
 
 /****************************************************************************
- * Name: up_initial_state
+ * Name: up_waste
  *
  * Description:
- *   A new thread is being started and a new TCB
- *   has been created. This function is called to initialize
- *   the processor specific portions of the new TCB.
+ *   up_waste() is the logic that will be executed when portions of kernel
+ *   or user-app is polling some register or similar, waiting for desired
+ *   status. This time is wasted away. This function offers a measure of
+ *   badly written piece of software or some undesired behavior.
  *
- *   This function must setup the intial architecture registers
- *   and/or  stack so that execution will begin at tcb->start
- *   on the next context switch.
+ *   At the same time this function adds to some IDLE time which portion
+ *   cannot be used for other purposes (yet).
  *
  ****************************************************************************/
 
-void up_initial_state(_TCB *tcb)
+void up_waste(void)
 {
-  struct xcptcontext *xcp = &tcb->xcp;
-  uint32_t cpsr;
-
-  /* Initialize the initial exception register context structure */
-
-  memset(xcp, 0, sizeof(struct xcptcontext));
-
-  /* Save the initial stack pointer */
-
-  xcp->regs[REG_SP]      = (uint32_t)tcb->adj_stack_ptr;
-
-  /* Save the task entry point */
-
-  xcp->regs[REG_PC]      = (uint32_t)tcb->start;
-
-  /* If this task is running PIC, then set the PIC base register to the
-   * address of the allocated D-Space region.
-   */
-
-#ifdef CONFIG_PIC
-  if (tcb->dspace != NULL)
-    {
-      /* Set the PIC base register (probably R10) to the address of the
-       * alloacated D-Space region.
-       */
-
-      xcp->regs[REG_PIC] = (uint32_t)tcb->dspace->region;
-    }
-#endif
-
-  /* Set supervisor- or user-mode, depending on how NuttX is configured nd
-   * what kind of thread is being started.  Disable FIQs in any event
-   */
-
-#ifdef CONFIG_NUTTX_KERNEL
-  if ((tcb->flags & TCB_FLAG_TTYPE_MASK) == TCB_FLAG_TTYPE_KERNEL)
-    {
-      /* It is a kernel thread.. set supervisor mode */
-
-      cpsr               = SVC_MODE | PSR_F_BIT;
-    }
-  else
-    {
-      /* It is a normal task or a pthread.  Set user mode */
-
-      cpsr               = USR_MODE | PSR_F_BIT;
-    }
-#else
-  /* If the kernel build is not selected, then all threads run in
-   * supervisor-mode.
-   */
-
-  cpsr                   = SVC_MODE | PSR_F_BIT;
-#endif
-
-  /* Enable or disable interrupts, based on user configuration */
-
-# ifdef CONFIG_SUPPRESS_INTERRUPTS
-  cpsr                  |= PSR_I_BIT;
-# endif
-
-  xcp->regs[REG_CPSR]    = cpsr;
+  idle_wastecounter++;
 }
+
 
